Transfered singleplayer logic to backend + bugfix

--- a/project/html/home.html
+++ b/project/html/home.html
@@ -216,7 +216,7 @@
                                                         <th scope="col" class="d-none d-md-block">W/L</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody id="middleTable">
+                                                <tbody id="mediumTable">
                                                 </tbody>
                                             </table>
                                         </div>
