--- a/project/html/user_profile.html
+++ b/project/html/user_profile.html
@@ -133,8 +133,8 @@
                             </tr>
                             <tr>
                                 <th scope="row">Medium</th>
-                                <td id="middleWin"></td>
-                                <td id="middleLose"></td>
+                                <td id="mediumWin"></td>
+                                <td id="mediumLose"></td>
                             </tr>
                             <tr>
                                 <th scope="row">Hard</th>
