--- a/project/html/lobby.html
+++ b/project/html/lobby.html
@@ -138,16 +138,16 @@
                     <div class="d-flex flex-column p-0 border border-light rounded-3">
                         <img src="/static/images/avatar_easy_200.png"
                             alt="logo" class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <button id="startEasyGameButton" type="submit" onclick="play(1)"
+                        <button id="startEasyGameButton" type="submit" onclick="playSingleplayer(0)"
                             class="form-control btn btn-outline-light btn-lg fw-bold rounded-0 rounded-bottom border-bottom-0 border-start-0 border-end-0 border-top-1">
                             Easy
                         </button>
                     </div>
 
                     <div class="d-flex flex-column p-0 border border-light rounded-3">
-                        <img src="/static/images/avatar_middle_200.png" 
+                        <img src="/static/images/avatar_medium_200.png" 
                             alt="logo" class="img-fluid mx-auto rounded-top avatar-size-lobby ratio ratio-1x1">
-                        <button id="startMiddleGameButton" type="submit"  onclick="play(2)"
+                        <button id="startMediumGameButton" type="submit"  onclick="playSingleplayer(1)"
                             class="form-control btn btn-outline-light btn-lg fw-bold rounded-0 rounded-bottom border-bottom-0 border-start-0 border-end-0 border-top-1">
                             Medium
                         </button>
@@ -155,7 +155,7 @@
                     <div class="d-flex flex-column p-0 border border-light rounded-3">
                         <img src="/static/images/avatar_hard_200.png"
                             alt="logo" class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <button id="startHardGameButton" type="submit"  onclick="play(3)"
+                        <button id="startHardGameButton" type="submit"  onclick="playSingleplayer(2)"
                             class="form-control btn btn-outline-light btn-lg fw-bold rounded-0 rounded-bottom border-bottom-0 border-start-0 border-end-0 border-top-1">
                             Hard
                         </button>
@@ -163,7 +163,7 @@
                     <div class="d-flex flex-column p-0 border border-light rounded-3">
                         <img src="/static/images/avatar_expert_200.png"
                             alt="logo" class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <button id="startExpertGameButton" type="submit"  onclick="play(4)"
+                        <button id="startExpertGameButton" type="submit"  onclick="playSingleplayer(3)"
                             class="form-control btn btn-outline-light btn-lg fw-bold rounded-0 rounded-bottom border-bottom-0 border-start-0 border-end-0 border-top-1">
                             Expert
                         </button>
