--- a/project/html/index.html
+++ b/project/html/index.html
@@ -261,8 +261,8 @@
                                     levels,
                                     or you
                                     can compete online against other players.
-                                </p>
-                                <p class="fs-6 fst-italic ps-3">INFO: Currently, multiplayer is limited to 1 vs. 1.</p>
+                                </p><br>
+                                <p class="fs-6 ps-3">INFO: Currently, multiplayer is limited to 1 vs. 1.</p>
                             </div>
                         </div>
                         <div>
@@ -277,7 +277,8 @@
                                     again.
                                     If the cards are different, they are turned over again and it is the next player's
                                     turn.
-                                </p>
+                                </p><br>
+                                <p class="fs-6 ps-3">IMPORTANT: If you leave during the match (singleplayer and multiplayer), you will get a Lose!</p>
                             </div>
                         </div>
                         <div>
