--- a/project/html/lobby.html
+++ b/project/html/lobby.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="d-flex p-2 justify-content-evenly text-light align-middle max-width-900 mx-auto">
                     <div class="my-auto text-center align-middle">
-                        <button id="createGameButton" type="submit" onclick="createLobby()" class="btn btn-outline-light btn-lg fw-bold text-center">
+                        <button id="createGameButton" type="submit" onclick="playMultiplayer()" class="btn btn-outline-light btn-lg fw-bold text-center">
                             Create Game
                         </button>
                     </div>
@@ -124,7 +124,7 @@
                     <div class="d-flex flex-column p-0 ">
                         <input type="text" id="joinLobbyTag"
                             class="border-0 bg-dark text-light rounded text-center py-2" placeholder="Friends Game ID">
-                        <button id="joinGameButton" type="submit" class="btn btn-outline-light btn-lg fw-bold  mt-3">
+                        <button id="joinGameButton" type="submit" class="btn btn-outline-light btn-lg fw-bold mt-3" onclick="joinMultiplayer()">
                             Join Game
                         </button>
                     </div>
