--- a/project/html/multiplayer.html
+++ b/project/html/multiplayer.html
@@ -50,13 +50,13 @@
                     <div class="col-4 text-center d-none d-sm-block align-self-center">
                         <a class="text-light h1 text-decoration-none">
                             <button type="submit" id="surrenderButton"
-                                class="form-control btn btn-outline-light btn-lg fw-bold rounded max-width-300">Surrender</button>
+                                class="form-control btn btn-outline-light btn-lg fw-bold rounded max-width-300" onclick="surrender()">Surrender</button>
                         </a>
                     </div>
                     <div class="col-8 col-sm-4 fw-light text-center align-self-center ">
                         <div class="d-flex text-light pl-xl-5">
-                            <div class="ms-auto dropdown">
-                                <p id="username" class="m-0 pb-1 fs-4"></p>
+                            <div class="ms-auto">
+                                <p id="gameID" class="m-0 pb-1 fs-4"></p>
                             </div>
                         </div>
                     </div>
@@ -73,7 +73,6 @@
                         <div class="row row-cols-11 h-100" id="memoryTable">
                             <div class="col-1 border border-light card-size  m-1">
                                 <div class="text-center inner-card">
-                                    <img src="https://i.redd.it/7uydugw620q61.jpg" class="card-image">
                                 </div>
                             </div>
                             <div class=" col-1 border border-light card-size  m-1">
@@ -354,86 +353,86 @@
                                 <p id="user2Username"></p>
                             </div>
                             <div>
-                                <p id="user2Score">0</p>
+                                <p id="user2Score"></p>
                             </div>
                         </div>
                         <div class="mt-5">
                             <button type="submit" id="playButton"
-                                class="form-control btn btn-outline-light btn-lg rounded " onclick="makeNextMove();" disabled> Playbutton
+                                class="form-control btn btn-outline-light btn-lg rounded " onclick="emitEndTurn();"
+                                disabled> End Turn
                             </button>
                         </div>
-                    </div>
-                    <div class="border border-light mt-auto d-none">
-                        <div class="chat h-100">
-                            <div class="d-flex flex-column" id="chat-content">
-                                <div class="message left-message">
-                                    <p>Hi</p>
-                                    <p>How are you ...???</p>
-                                    <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
+                        <div class="border border-light mt-auto d-none">
+                            <div class="chat h-100">
+                                <div class="d-flex flex-column" id="chat-content">
+                                    <div class="message left-message">
+                                        <p>Hi</p>
+                                        <p>How are you ...???</p>
+                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
+                                    </div>
+                                    <div class="message right-message">
+                                        <p>Hi, I'm good.</p>
+                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
+                                        </p>
+                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
+                                    </div>
+                                    <div class="message left-message">
+                                        <p>Hi</p>
+                                        <p>How are you ...???</p>
+                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
+                                    </div>
+                                    <div class="message right-message">
+                                        <p>Hi, I'm good.</p>
+                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
+                                        </p>
+                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
+                                    </div>
+                                    <div class="message left-message">
+                                        <p>Hi</p>
+                                        <p>How are you ...???</p>
+                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
+                                    </div>
+                                    <div class="message right-message">
+                                        <p>Hi, I'm good.</p>
+                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
+                                        </p>
+                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
+                                    </div>
+                                    <div class="message left-message">
+                                        <p>Hi</p>
+                                        <p>How are you ...???</p>
+                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
+                                    </div>
+                                    <div class="message right-message">
+                                        <p>Hi, I'm good.</p>
+                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
+                                        </p>
+                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
+                                    </div>
+                                    <div class="message left-message">
+                                        <p>Hi</p>
+                                        <p>How are you ...???</p>
+                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
+                                    </div>
+                                    <div class="message right-message">
+                                        <p>Hi, I'm good.</p>
+                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
+                                        </p>
+                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
+                                    </div>
                                 </div>
-                                <div class="message right-message">
-                                    <p>Hi, I'm good.</p>
-                                    <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                    </p>
-                                    <p>Long time no see! Tomorrow office. will be free on sunday.</p>
+                                <div class="d-flex bg-transparent p-2 border-top">
+                                    <input class="chat-input bg-transparent text-light flex-grow-1" type="text"
+                                        placeholder="Message your opponent">
+                                    <a class="text-info ms-2 my-auto" href="#">
+                                        <i class="bi bi-arrow-right-square"></i>
+                                    </a>
                                 </div>
-                                <div class="message left-message">
-                                    <p>Hi</p>
-                                    <p>How are you ...???</p>
-                                    <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                </div>
-                                <div class="message right-message">
-                                    <p>Hi, I'm good.</p>
-                                    <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                    </p>
-                                    <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                </div>
-                                <div class="message left-message">
-                                    <p>Hi</p>
-                                    <p>How are you ...???</p>
-                                    <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                </div>
-                                <div class="message right-message">
-                                    <p>Hi, I'm good.</p>
-                                    <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                    </p>
-                                    <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                </div>
-                                <div class="message left-message">
-                                    <p>Hi</p>
-                                    <p>How are you ...???</p>
-                                    <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                </div>
-                                <div class="message right-message">
-                                    <p>Hi, I'm good.</p>
-                                    <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                    </p>
-                                    <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                </div>
-                                <div class="message left-message">
-                                    <p>Hi</p>
-                                    <p>How are you ...???</p>
-                                    <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                </div>
-                                <div class="message right-message">
-                                    <p>Hi, I'm good.</p>
-                                    <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                    </p>
-                                    <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                </div>
-                            </div>
-                            <div class="d-flex bg-transparent p-2 border-top">
-                                <input class="chat-input bg-transparent text-light flex-grow-1" type="text"
-                                    placeholder="Message your opponent">
-                                <a class="text-info ms-2 my-auto" href="#">
-                                    <i class="bi bi-arrow-right-square"></i>
-                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </main>
 
     <footer>
@@ -458,7 +457,6 @@
     <!--- Custom JS --->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/static/scripts/play.js"></script>
-    <script src="/static/scripts/play_server.js"></script>
     <script src="/static/scripts/multiplayer_socket.js"></script>
 </body>
 
