UI changes and bugfixing

--- a/project/html/index.html
+++ b/project/html/index.html
@@ -29,68 +29,43 @@
         <section id="pageOne" class="section1 d-flex flex-column">
             <header>
                 <nav class="navbar navbar-expand-lg navbar-dark">
-                    <div class="container-fluid px-3">
+                    <div class="container-fluid px-0 px-sm-3">
                         <div class="row displ-content">
-                            <div class="col-4 d-none d-sm-block align-self-start align-self-lg-center">
-                                <a class="navbar-brand active d-block d-lg-none" href="/">
-                                    <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA"
-                                        alt="logo" class="img-fluid">
-                                </a>
-                                <a class="navbar-brand active d-none d-lg-block" href="/">
-                                    <img src="https://i.picsum.photos/id/42/400/70.jpg?hmac=MCA_hv-pOtJlwxxpHkvN8gA1Rbu29xEl55n8jPJW0As"
-                                        alt="logo" class="img-fluid">
-                                </a>
-                            </div>
-                            <div class="col-4 text-center d-none d-sm-block align-self-start align-self-lg-center">
-                                <a class="text-light h1 text-decoration-none">MEMEMORY</a>
-                            </div>
-                            <div class="col-9 col-sm-4 text-sm-end fw-light align-self-start align-self-lg-center">
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false"
-                                    aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
-                                    <ul class="navbar-nav mb-2 mb-lg-0 navbar-right">
-                                        <li class="nav-item dropdown pt-3 pt-lg-0 align-self-lg-center">
-                                            <a class="nav-link dropdown-toggle text-light px-3 pl-xl-5" role="button"
-                                                data-bs-toggle="dropdown">Other Groups</a>
-                                            <ul class="dropdown-menu bg-dark">
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe2.testsites.info/">Group 2</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe3.testsites.info/">Group 3</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe4.testsites.info/">Group 4</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe5.testsites.info/">Group 5</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe6.testsites.info/">Group 6</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe7.testsites.info/">Group 7</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe8.testsites.info/">Group 8</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe9.testsites.info/">Group 9</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe10.testsites.info/">Group 10</a></li>
-                                                <li><a class="dropdown-item text-light p-2 p-md-3"
-                                                        href="https://gruppe11.testsites.info/">Group 11</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="nav-item align-self-lg-center">
-                                            <a class="nav-link text-light  px-3 pl-xl-5" href="/beta">
-                                                <p class="text-danger m-0 fw-bold">Try Beta, Group 1</p>
-                                            </a>
-                                        </li>
-                                    </ul>
+                            <div class="col-6">
+                                <div class="navbar-brand active">
+                                    <a href="/">
+                                        <img src="/static/images/logo.png" alt="logo" class="img-fluid logo">
+                                    </a>
                                 </div>
                             </div>
-                            <div class="col d-sm-none align-self-start">
-                                <a class="navbar-brand active text-end" href="/">
-                                    <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA"
-                                        alt="logo" class="img-fluid">
-                                </a>
+                            <div class="col-6 text-end fw-light fs-5">
+                                <div class="dropdown">
+                                    <a class="dropdown-toggle text-light px-0 pl-xl-5" role="button"
+                                        data-bs-toggle="dropdown" id="otherGroupDropdown">Other Groups</a>
+                                    <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end bg-dark"
+                                        aria-labelledby="otherGroupDropdown">
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe2.testsites.info/">Group 2</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe3.testsites.info/">Group 3</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe4.testsites.info/">Group 4</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe5.testsites.info/">Group 5</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe6.testsites.info/">Group 6</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe7.testsites.info/">Group 7</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe8.testsites.info/">Group 8</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe9.testsites.info/">Group 9</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe10.testsites.info/">Group 10</a></li>
+                                        <li><a class="dropdown-item text-light p-2 p-md-3"
+                                                href="https://gruppe11.testsites.info/">Group 11</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -166,7 +141,7 @@
                                                     <div class="col col-lg-6 mt-1 mt-lg-3 px-5 px-sm-1">
                                                         <button type="button"
                                                             class="form-control btn btn-outline-info btn-sm rounded px-0"
-                                                            onclick="forgotPassword()">Forgot Password</button>
+                                                            onclick="forgotPassword()" disabled>Forgot Password</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -278,7 +253,8 @@
                                     If the cards are different, they are turned over again and it is the next player's
                                     turn.
                                 </p><br>
-                                <p class="fs-6 ps-3">IMPORTANT: If you leave during the match (singleplayer and multiplayer), you will get a Lose!</p>
+                                <p class="fs-6 ps-3">IMPORTANT: If you leave during the match (singleplayer and
+                                    multiplayer), you will get a Lose!</p>
                             </div>
                         </div>
                         <div>
@@ -305,7 +281,7 @@
                 <div class="container-fluid pt-2">
                     <nav class="d-flex justify-content-center text-center">
                         <div>
-                            <a class="nav-link text-light px-4 py-2 " href="#">Impressum</a>
+                            <a class="nav-link text-light px-4 py-2 " href="https://de.wikipedia.org/wiki/Impressum">Impressum</a>
                         </div>
                         <div>
                             <a class="nav-link text-light px-4 py-2"
