--- a/project/html/home.html
+++ b/project/html/home.html
@@ -16,6 +16,7 @@
     <!--- Custom CSS-->
     <!--- identical to index.html --->
     <link rel="stylesheet" href="/static/styles/index.css">
+    <link rel="stylesheet" href="/static/styles/home.css">
 
     <!--- Icons --->
     <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon/favicon.ico">
@@ -31,32 +32,27 @@
         <section id="pageOne" class="section1 d-flex flex-column">
             <header>
                 <nav class="navbar navbar-expand-lg navbar-dark">
-                    <div class="container-fluid px-3">
+                    <div class="container-fluid px-0 px-sm-3">
                         <div class="row displ-content">
-                            <div class="col-4 align-self-start align-self-lg-center">
-                                <a class="navbar-brand active d-block d-xxl-none" href="/">
-                                    <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA"
-                                        alt="logo" class="img-fluid">
-                                </a>
-                                <a class="navbar-brand active d-none d-xxl-block" href="/">
-                                    <img src="https://i.picsum.photos/id/42/400/70.jpg?hmac=MCA_hv-pOtJlwxxpHkvN8gA1Rbu29xEl55n8jPJW0As"
-                                        alt="logo" class="img-fluid">
-                                </a>
+                            <div class="col-6 col-lg-4">
+                                <div class="navbar-brand active">
+                                    <a href="/">
+                                        <img src="/static/images/logo.png" alt="logo" class="img-fluid logo">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="col-4 text-center d-none d-sm-block align-self-center">
-                                <a class="text-light h1 text-decoration-none">
+                            <div class="col-4 text-center d-none d-lg-block">
                                     <button type="submit"
-                                        class="form-control btn btn-outline-light btn-lg fw-bold rounded max-width-300"
+                                        class="form-control btn btn-lg fw-bold rounded max-width-300 lobby-button"
                                         onclick="startLobbyPage()">Play</button>
-                                </a>
                             </div>
-                            <div class="col-8 col-sm-4 fw-light text-center align-self-center ">
+                            <div class="col-6 col-lg-4 fw-light">
                                 <div class="d-flex text-light pl-xl-5">
                                     <div class="ms-auto dropdown">
                                         <p id="username" class="m-0 pb-1 dropdown-toggle fs-4"
                                             data-bs-toggle="dropdown">
                                         </p>
-                                        <ul class="dropdown-menu dropdown-menu-end bg-dark">
+                                        <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end bg-dark">
                                             <li>
                                                 <div class="dropdown-item d-flex text-light"
                                                     onclick="startProfilePage()">
@@ -120,7 +116,7 @@
                 <div class="container-fluid">
                     <div
                         class="row row-cols-1 row-cols-lg-2 p-3 px-xl-5 justify-content-evenly justify-content-lg-start">
-                        <div class="col-6 col-lg-6 p-2 p-xxl-4 my-auto">
+                        <div class="col-6 col-lg-6 p-2 p-xxl-4 my-auto d-none d-lg-block">
                             <div>
                                 <video autoplay muted loop id="myVideo" class="max-height-set-500 mx-auto">
                                     <source src="/static/images/homepage_video.mp4" type="video/mp4">
@@ -129,20 +125,20 @@
                         </div>
                         <div class="col-12 col-sm-10 col-md-8 col-lg-6 py-3 px-0 p-lg-4 my-2 my-lg-auto text-light">
                             <div class="container-sm my-auto rounded-3 p-0 max-width-600">
-                                <div class="text-center text-light fs-3 border-bottom border-light">
-                                    <p class="pb-3 m-0">
+                                <div class="text-center text-light fs-3">
+                                    <p class="pb-5 m-0">
                                         Scoreboard
                                     </p>
                                 </div>
-                                <div class="border border-light">
-                                    <nav>
+                                <div class="">
+                                    <nav class="pb-4">
                                         <div class="nav nav-tabs d-flex flex-nowrap" id="nav-tab" role="tablist">
                                             <button class="nav-link text-light px-0 flex-fill  active" id="nav-easy-tab"
                                                 data-bs-toggle="tab" data-bs-target="#nav-easy" type="button" role="tab"
                                                 aria-controls="nav-easy" aria-selected="true">Easy</button>
-                                            <button class="nav-link text-light px-0 flex-fill" id="nav-middle-tab"
-                                                data-bs-toggle="tab" data-bs-target="#nav-middle" type="button"
-                                                role="tab" aria-controls="nav-middle"
+                                            <button class="nav-link text-light px-0 flex-fill" id="nav-medium-tab"
+                                                data-bs-toggle="tab" data-bs-target="#nav-medium" type="button"
+                                                role="tab" aria-controls="nav-medium"
                                                 aria-selected="false">Medium</button>
                                             <button class="nav-link text-light px-0 flex-fill" id="nav-hard-tab"
                                                 data-bs-toggle="tab" data-bs-target="#nav-hard" type="button" role="tab"
@@ -163,11 +159,11 @@
                                             <table class="table text-light my-2 table-borderless">
                                                 <thead>
                                                     <tr>
-                                                        <td>#</td>
-                                                        <th scope="col">Name</th>
-                                                        <th scope="col">Win</th>
-                                                        <th scope="col">Lose</th>
-                                                        <th scope="col" class="d-none d-md-block">W/L</th>
+                                                        <td></td>
+                                                        <th scope="col" class="text-start">Name</th>
+                                                        <th scope="col" class="text-end">Win</th>
+                                                        <th scope="col" class="text-end">Lose</th>
+                                                        <th scope="col" class="text-end pe-5 d-none d-md-block">W/L</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody id="easyTable">
@@ -204,16 +200,16 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        <div class="tab-pane fade show" id="nav-middle" role="tabpanel"
-                                            aria-labelledby="nav-middle-tab">
+                                        <div class="tab-pane fade show" id="nav-medium" role="tabpanel"
+                                            aria-labelledby="nav-medium-tab">
                                             <table class="table text-light my-2 table-borderless">
                                                 <thead>
                                                     <tr>
-                                                        <td>#</td>
-                                                        <th scope="col">Name</th>
-                                                        <th scope="col">Win</th>
-                                                        <th scope="col">Lose</th>
-                                                        <th scope="col" class="d-none d-md-block">W/L</th>
+                                                        <td></td>
+                                                        <th scope="col" class="text-start">Name</th>
+                                                        <th scope="col" class="text-end">Win</th>
+                                                        <th scope="col" class="text-end">Lose</th>
+                                                        <th scope="col" class="text-end pe-5 d-none d-md-block">W/L</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody id="mediumTable">
@@ -225,11 +221,11 @@
                                             <table class="table text-light my-2 table-borderless">
                                                 <thead>
                                                     <tr>
-                                                        <td>#</td>
-                                                        <th scope="col">Name</th>
-                                                        <th scope="col">Win</th>
-                                                        <th scope="col">Lose</th>
-                                                        <th scope="col" class="d-none d-md-block">W/L</th>
+                                                        <td></td>
+                                                        <th scope="col" class="text-start">Name</th>
+                                                        <th scope="col" class="text-end">Win</th>
+                                                        <th scope="col" class="text-end">Lose</th>
+                                                        <th scope="col" class="text-end pe-5 d-none d-md-block">W/L</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody id="hardTable">
@@ -241,11 +237,11 @@
                                             <table class="table text-light my-2 table-borderless">
                                                 <thead>
                                                     <tr>
-                                                        <td>#</td>
-                                                        <th scope="col">Name</th>
-                                                        <th scope="col">Win</th>
-                                                        <th scope="col">Lose</th>
-                                                        <th scope="col" class="d-none d-md-block">W/L</th>
+                                                        <td></td>
+                                                        <th scope="col" class="text-start">Name</th>
+                                                        <th scope="col" class="text-end">Win</th>
+                                                        <th scope="col" class="text-end">Lose</th>
+                                                        <th scope="col" class="text-end pe-5 d-none d-md-block">W/L</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody id="expertTable">
@@ -257,11 +253,11 @@
                                             <table class="table text-light my-2 table-borderless">
                                                 <thead>
                                                     <tr>
-                                                        <td>#</td>
-                                                        <th scope="col">Name</th>
-                                                        <th scope="col">Win</th>
-                                                        <th scope="col">Lose</th>
-                                                        <th scope="col" class="d-none d-md-block">W/L</th>
+                                                        <td></td>
+                                                        <th scope="col" class="text-start">Name</th>
+                                                        <th scope="col" class="text-end">Win</th>
+                                                        <th scope="col" class="text-end">Lose</th>
+                                                        <th scope="col" class="text-end pe-5 d-none d-md-block">W/L</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody id="multiplayerTable">
@@ -318,7 +314,8 @@
                                     If the cards are different, they are turned over again and it is the next player's
                                     turn.
                                 </p><br>
-                                <p class="fs-6 ps-3">IMPORTANT: If you leave during the match (singleplayer and multiplayer), you will get a Lose!</p>
+                                <p class="fs-6 ps-3">IMPORTANT: If you leave during the match (singleplayer and
+                                    multiplayer), you will get a Lose!</p>
                             </div>
                         </div>
                         <div>
@@ -345,7 +342,7 @@
                 <div class="container-fluid pt-2">
                     <nav class="d-flex justify-content-center text-center">
                         <div>
-                            <a class="nav-link text-light px-4 py-2 " href="#">Impressum</a>
+                            <a class="nav-link text-light px-4 py-2 " href="https://de.wikipedia.org/wiki/Impressum">Impressum</a>
                         </div>
                         <div>
                             <a class="nav-link text-light px-4 py-2"
