--- a/project/html/lobby.html
+++ b/project/html/lobby.html
@@ -30,21 +30,18 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid px-3">
                 <div class="row displ-content">
-                    <div class="col-4 align-self-start align-self-lg-center">
-                        <a class="navbar-brand active d-block d-xxl-none" href="/">
-                            <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA"
-                                alt="logo" class="img-fluid">
-                        </a>
-                        <a class="navbar-brand active d-none d-xxl-block" href="/">
-                            <img src="https://i.picsum.photos/id/42/400/70.jpg?hmac=MCA_hv-pOtJlwxxpHkvN8gA1Rbu29xEl55n8jPJW0As"
-                                alt="logo" class="img-fluid">
-                        </a>
+                    <div class="col-6">
+                        <div class="navbar-brand active">
+                            <a href="/">
+                                <img src="/static/images/logo.png" alt="logo" class="img-fluid logo">
+                            </a>
+                        </div>
                     </div>
-                    <div class="col-8 fw-light text-center align-self-center ">
+                    <div class="col-6 text-end fw-light">
                         <div class="d-flex text-light pl-xl-5">
                             <div class="ms-auto dropdown">
                                 <p id="username" class="m-0 pb-1 dropdown-toggle fs-4" data-bs-toggle="dropdown"></p>
-                                <ul class="dropdown-menu dropdown-menu-end bg-dark">
+                                <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end bg-dark">
                                     <li>
                                         <div class="dropdown-item d-flex text-light" onclick="startScoreboardPage()">
                                             <i class="bi bi-trophy pe-3"></i>
@@ -110,21 +107,24 @@
         <div class="container-fluid">
             <div class="pb-5">
                 <div>
-                    <p class="fs-3 text-light text-center">Multiplayer</p>
+                    <p class="fs-3 text-light text-center mb-3">Multiplayer</p>
                 </div>
                 <div class="d-flex p-2 justify-content-evenly text-light align-middle max-width-900 mx-auto">
                     <div class="my-auto text-center align-middle">
-                        <button id="createGameButton" type="submit" onclick="playMultiplayer()" class="btn btn-outline-light btn-lg fw-bold text-center">
+                        <button id="createGameButton" type="submit" onclick="playMultiplayer()"
+                            class="btn btn-outline-light btn-lg fw-bold text-center px-4 mx-1">
                             Create Game
                         </button>
                     </div>
                     <div>
-                        <p class="py-5 m-0 text-light text-center">or</p>
+                        <p class="py-5 m-0 text-light text-center fs-5">or</p>
                     </div>
                     <div class="d-flex flex-column p-0 ">
                         <input type="text" id="joinLobbyTag"
-                            class="border-0 bg-dark text-light rounded text-center py-2" placeholder="Friends Game ID">
-                        <button id="joinGameButton" type="submit" class="btn btn-outline-light btn-lg fw-bold mt-3" onclick="joinMultiplayer()">
+                            class="border-0 bg-dark text-light rounded text-center py-2 mt-3"
+                            placeholder="Insert Game ID">
+                        <button id="joinGameButton" type="submit" class="btn btn-outline-light btn-lg fw-bold mt-2"
+                            onclick="joinMultiplayer()">
                             Join Game
                         </button>
                     </div>
@@ -132,41 +132,41 @@
             </div>
             <div class="pt-0 pt-lg-5">
                 <div>
-                    <p class="fs-3 text-light text-center">Singleplayer</p>
+                    <p class="fs-3 text-light text-center mb-5">Singleplayer</p>
                 </div>
                 <div class="d-flex p-2 justify-content-evenly">
-                    <div class="d-flex flex-column p-0 border border-light rounded-3">
-                        <img src="/static/images/avatar_easy_200.png"
-                            alt="logo" class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <button id="startEasyGameButton" type="submit" onclick="playSingleplayer(0)"
-                            class="form-control btn btn-outline-light btn-lg fw-bold rounded-0 rounded-bottom border-bottom-0 border-start-0 border-end-0 border-top-1">
+                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover"
+                        onclick="playSingleplayer(0)">
+                        <img src="/static/images/avatar_easy_200.png" alt="logo"
+                            class="img-fluid mx-auto rounded-top avatar-size-lobby">
+                        <div id="startEasyGameButton" type="submit" class="text-light fw-bold mt-3">
                             Easy
-                        </button>
+                        </div>
                     </div>
 
-                    <div class="d-flex flex-column p-0 border border-light rounded-3">
-                        <img src="/static/images/avatar_medium_200.png" 
-                            alt="logo" class="img-fluid mx-auto rounded-top avatar-size-lobby ratio ratio-1x1">
-                        <button id="startMediumGameButton" type="submit"  onclick="playSingleplayer(1)"
-                            class="form-control btn btn-outline-light btn-lg fw-bold rounded-0 rounded-bottom border-bottom-0 border-start-0 border-end-0 border-top-1">
+                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover"
+                        onclick="playSingleplayer(1)">
+                        <img src="/static/images/avatar_medium_200.png" alt="logo"
+                            class="img-fluid mx-auto rounded-top avatar-size-lobby">
+                        <div id="startMediumGameButton" type="submit" class="text-light fw-bold mt-3">
                             Medium
-                        </button>
+                        </div>
                     </div>
-                    <div class="d-flex flex-column p-0 border border-light rounded-3">
-                        <img src="/static/images/avatar_hard_200.png"
-                            alt="logo" class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <button id="startHardGameButton" type="submit"  onclick="playSingleplayer(2)"
-                            class="form-control btn btn-outline-light btn-lg fw-bold rounded-0 rounded-bottom border-bottom-0 border-start-0 border-end-0 border-top-1">
+                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover"
+                        onclick="playSingleplayer(2)">
+                        <img src="/static/images/avatar_hard_200.png" alt="logo"
+                            class="img-fluid mx-auto rounded-top avatar-size-lobby">
+                        <div id="startHardGameButton" type="submit" class="text-light fw-bold mt-3">
                             Hard
-                        </button>
+                        </div>
                     </div>
-                    <div class="d-flex flex-column p-0 border border-light rounded-3">
-                        <img src="/static/images/avatar_expert_200.png"
-                            alt="logo" class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <button id="startExpertGameButton" type="submit"  onclick="playSingleplayer(3)"
-                            class="form-control btn btn-outline-light btn-lg fw-bold rounded-0 rounded-bottom border-bottom-0 border-start-0 border-end-0 border-top-1">
+                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover"
+                        onclick="playSingleplayer(3)">
+                        <img src="/static/images/avatar_expert_200.png" alt="logo"
+                            class="img-fluid mx-auto rounded-top avatar-size-lobby">
+                        <div id="startExpertGameButton" type="submit" class="text-light fw-bold mt-3">
                             Expert
-                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -177,14 +177,13 @@
         <div class="container-fluid pt-5">
             <nav class="d-flex justify-content-center text-center">
                 <div>
-                    <a class="nav-link text-light px-4 py-2 " href="#">Impressum</a>
+                    <a class="nav-link text-light px-4 py-2 " href="https://de.wikipedia.org/wiki/Impressum">Impressum</a>
                 </div>
                 <div>
                     <a class="nav-link text-light px-4 py-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">don't
                         click</a>
                 </div>
             </nav>
-
         </div>
     </footer>
 
