--- a/project/html/multiplayer.html
+++ b/project/html/multiplayer.html
@@ -39,24 +39,25 @@
                 <div class="row displ-content">
                     <div class="col-4 align-self-start align-self-lg-center">
                         <a class="d-xxl-none" href="/">
-                            <img src="https://i.picsum.photos/id/338/70/50.jpg?hmac=vekFJNJE9Q7zEpaT2s9UpSxBz8NNC4m9tIAe9wgo6dA"
-                                alt="logo" class="img-fluid">
+                            <img src="/static/images/logo_small.png" alt="logo" class="img-fluid logo">
                         </a>
                         <a class=" d-none d-xxl-block" href="/">
-                            <img src="https://i.picsum.photos/id/42/400/70.jpg?hmac=MCA_hv-pOtJlwxxpHkvN8gA1Rbu29xEl55n8jPJW0As"
-                                alt="logo" class="img-fluid">
+                            <img src="/static/images/logo.png" alt="logo" class="img-fluid logo">
                         </a>
                     </div>
                     <div class="col-4 text-center d-none d-sm-block align-self-center">
                         <a class="text-light h1 text-decoration-none">
                             <button type="submit" id="surrenderButton"
-                                class="form-control btn btn-outline-light btn-lg fw-bold rounded max-width-300" onclick="surrender()">Surrender</button>
+                                class="form-control btn btn-outline-danger btn-lg fw-bold rounded max-width-300"
+                                onclick="surrender()" disabled>Surrender</button>
                         </a>
                     </div>
-                    <div class="col-8 col-sm-4 fw-light text-center align-self-center ">
-                        <div class="d-flex text-light pl-xl-5">
+                    <div class="col-8 col-sm-4 text-center align-self-center ">
+                        <div class="d-flex text-secondary pl-xl-5">
                             <div class="ms-auto">
-                                <p id="gameID" class="m-0 pb-1 fs-4"></p>
+                                <p id="gameID" class="m-0 pb-1 fs-4" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                                    title="click to copy" data-bs-toggle="popover" data-bs-placement="bottom"
+                                    data-bs-content="copied" data-bs-container="body"></p>
                             </div>
                         </div>
                     </div>
@@ -71,275 +72,11 @@
                 <div class="col-10 h-100">
                     <div class="container-xxl h-100">
                         <div class="row row-cols-11 h-100" id="memoryTable">
-                            <div class="col-1 border border-light card-size  m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size  m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
-                            <div class=" col-1 border border-light card-size m-1">
-                                <div class="text-center inner-card">
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-2 d-flex flex-column h-100 p-0">
-                    <div class="border border-light text-light fs-4 p-3">
+                    <div class="text-light fs-4 p-3">
                         <div class="d-flex pb-2">
                             <div class="flex-grow-1">
                                 <p id="user1Username"></p>
@@ -358,7 +95,7 @@
                         </div>
                         <div class="mt-5">
                             <button type="submit" id="playButton"
-                                class="form-control btn btn-outline-light btn-lg rounded " onclick="emitEndTurn();"
+                                class="form-control btn btn-outline-info btn-lg rounded " onclick="emitEndTurn();"
                                 disabled> End Turn
                             </button>
                         </div>
@@ -439,14 +176,13 @@
         <div class="container-fluid pt-5">
             <nav class="d-flex justify-content-center text-center">
                 <div>
-                    <a class="nav-link text-light px-4 py-2 " href="#">Impressum</a>
+                    <a class="nav-link text-light px-4 py-2 " href="https://de.wikipedia.org/wiki/Impressum">Impressum</a>
                 </div>
                 <div>
                     <a class="nav-link text-light px-4 py-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">don't
                         click</a>
                 </div>
             </nav>
-
         </div>
     </footer>
 
