--- a/project/html/index.html
+++ b/project/html/index.html
@@ -11,7 +11,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/styles/full-page-scroll.css">
 
     <!--- Custom CSS-->
     <link rel="stylesheet" href="/static/styles/index.css">
@@ -25,8 +24,8 @@
 </head>
 
 <body class="d-flex flex-column">
-    <div id="main" class="scroll-container">
-        <section id="pageOne" class="section1 d-flex flex-column">
+    <div id="main">
+        <section class="d-flex flex-column min-h-100">
             <header>
                 <nav class="navbar navbar-expand-lg navbar-dark">
                     <div class="container-fluid px-0 px-sm-3">
@@ -42,7 +41,7 @@
                                 <div class="dropdown">
                                     <a class="dropdown-toggle text-light px-0 pl-xl-5" role="button"
                                         data-bs-toggle="dropdown" id="otherGroupDropdown">Other Groups</a>
-                                    <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end bg-dark"
+                                    <ul class="dropdown-menu dropdown-menu-end bg-dark"
                                         aria-labelledby="otherGroupDropdown">
                                         <li><a class="dropdown-item text-light p-2 p-md-3"
                                                 href="https://gruppe2.testsites.info/">Group 2</a></li>
@@ -76,7 +75,7 @@
                 <div class="container-fluid">
                     <div
                         class="row row-cols-1 row-cols-lg-2 p-3 px-xl-5 justify-content-evenly justify-content-lg-start">
-                        <div class="col-6 col-lg-6 p-2 p-xxl-4">
+                        <div class="col-6 col-lg-6 p-2 p-xxl-4" id="videoContainer">
                             <div>
                                 <video autoplay muted loop id="myVideo" class="max-height-set-500 mx-auto">
                                     <source src="/static/images/homepage_video.mp4" type="video/mp4">
@@ -220,7 +219,7 @@
             </main>
         </section>
 
-        <section id="pageTwo" class="section2 d-flex flex-column">
+        <section id="pageTwo" class="d-flex flex-column min-h-100">
             <main class="my-auto">
                 <div class="container-fluid">
                     <div class="container-xxl px-0 py-5 text-light">
@@ -241,8 +240,8 @@
                             </div>
                         </div>
                         <div>
-                            <div>
-                                <p class="fs-3 pt-0 pt-lg-5">Instructions</p>
+                            <div class="pt-5">
+                                <p class="fs-3">Instructions</p>
                             </div>
                             <div>
                                 <p class="fs-5 ps-3">The game decides "randomly" who may start.
@@ -258,8 +257,8 @@
                             </div>
                         </div>
                         <div>
-                            <div>
-                                <p class="fs-3 pt-0 pt-lg-5">Chat Guidelines</p>
+                            <div class="pt-5">
+                                <p class="fs-3">Chat Guidelines</p>
                             </div>
                             <div>
                                 <li class="fs-5 ps-3">
@@ -300,17 +299,7 @@
     </script>
     <!--- Custom JS --->
     <script src="/static/scripts/index.js"></script>
-    <!--- Full Page Scroll --->
-    <script src="/static/scripts/full-page-scroll.js"></script>
-    <script type="text/javascript">
-        new fullScroll({
-            mainElement: "main",
-            displayDots: true,
-            dotsPosition: "right",
-            animateTime: 0.7,
-            animateFunction: "ease",
-        });
-    </script>
+
 </body>
 
 </html>
