--- a/project/html/lobby.html
+++ b/project/html/lobby.html
@@ -15,6 +15,7 @@
     <!--- Custom CSS-->
     <!--- identical to index.html --->
     <link rel="stylesheet" href="/static/styles/index.css">
+    <link rel="stylesheet" href="/static/styles/lobby.css">
 
     <!--- Icons --->
     <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon/favicon.ico">
@@ -40,8 +41,8 @@
                     <div class="col-6 text-end fw-light">
                         <div class="d-flex text-light pl-xl-5">
                             <div class="ms-auto dropdown">
-                                <p id="username" class="m-0 pb-1 dropdown-toggle fs-4" data-bs-toggle="dropdown"></p>
-                                <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end bg-dark">
+                                <p id="username" class="m-0 pb-1 dropdown-toggle fs-4 overflow-hidden" data-bs-toggle="dropdown"></p>
+                                <ul class="dropdown-menu dropdown-menu-end bg-dark">
                                     <li>
                                         <div class="dropdown-item d-flex text-light" onclick="startScoreboardPage()">
                                             <i class="bi bi-trophy pe-3"></i>
@@ -109,21 +110,21 @@
                 <div>
                     <p class="fs-3 text-light text-center mb-3">Multiplayer</p>
                 </div>
-                <div class="d-flex p-2 justify-content-evenly text-light align-middle max-width-900 mx-auto">
-                    <div class="my-auto text-center align-middle">
+                <div class="d-flex flex-column flex-md-row p-2 justify-content-evenly text-light align-middle max-width-900 mx-auto">
+                    <div class="m-auto text-center align-middle max-width-200">
                         <button id="createGameButton" type="submit" onclick="playMultiplayer()"
-                            class="btn btn-outline-light btn-lg fw-bold text-center px-4 mx-1">
+                            class="btn btn-lg fw-bold text-center px-4 mx-1 multiplayer-button">
                             Create Game
                         </button>
                     </div>
                     <div>
-                        <p class="py-5 m-0 text-light text-center fs-5">or</p>
+                        <p class="py-2 py-md-5 m-0 text-or text-center fs-5">or</p>
                     </div>
-                    <div class="d-flex flex-column p-0 ">
+                    <div class="d-flex mx-auto flex-column p-0 max-width-200">
                         <input type="text" id="joinLobbyTag"
                             class="border-0 bg-dark text-light rounded text-center py-2 mt-3"
                             placeholder="Insert Game ID">
-                        <button id="joinGameButton" type="submit" class="btn btn-outline-light btn-lg fw-bold mt-2"
+                        <button id="joinGameButton" type="submit" class="btn btn-lg fw-bold mt-2 multiplayer-button"
                             onclick="joinMultiplayer()">
                             Join Game
                         </button>
@@ -132,39 +133,39 @@
             </div>
             <div class="pt-0 pt-lg-5">
                 <div>
-                    <p class="fs-3 text-light text-center mb-5">Singleplayer</p>
+                    <p class="fs-3 text-light text-center mb-3 mb-sm-5">Singleplayer</p>
                 </div>
-                <div class="d-flex p-2 justify-content-evenly">
-                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover"
+                <div class="d-flex flex-wrap flex-sm-nowrap p-2 justify-content-evenly">
+                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover max-width-40-percent"
                         onclick="playSingleplayer(0)">
                         <img src="/static/images/avatar_easy_200.png" alt="logo"
                             class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <div id="startEasyGameButton" type="submit" class="text-light fw-bold mt-3">
+                        <div id="startEasyGameButton" type="submit" class="text-easy fw-bold mt-3">
                             Easy
                         </div>
                     </div>
 
-                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover"
+                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover max-width-40-percent"
                         onclick="playSingleplayer(1)">
                         <img src="/static/images/avatar_medium_200.png" alt="logo"
                             class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <div id="startMediumGameButton" type="submit" class="text-light fw-bold mt-3">
+                        <div id="startMediumGameButton" type="submit" class="text-medium fw-bold mt-3">
                             Medium
                         </div>
                     </div>
-                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover"
+                    <div class="d-flex flex-column p-0 mt-3 mt-sm-0 rounded-3 btn btn-lg zoom-on-hover max-width-40-percent"
                         onclick="playSingleplayer(2)">
                         <img src="/static/images/avatar_hard_200.png" alt="logo"
                             class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <div id="startHardGameButton" type="submit" class="text-light fw-bold mt-3">
+                        <div id="startHardGameButton" type="submit" class="text-hard fw-bold mt-3">
                             Hard
                         </div>
                     </div>
-                    <div class="d-flex flex-column p-0 rounded-3 btn btn-lg zoom-on-hover"
+                    <div class="d-flex flex-column p-0 mt-3 mt-sm-0 rounded-3 btn btn-lg zoom-on-hover max-width-40-percent"
                         onclick="playSingleplayer(3)">
                         <img src="/static/images/avatar_expert_200.png" alt="logo"
                             class="img-fluid mx-auto rounded-top avatar-size-lobby">
-                        <div id="startExpertGameButton" type="submit" class="text-light fw-bold mt-3">
+                        <div id="startExpertGameButton" type="submit" class="text-expert fw-bold mt-3">
                             Expert
                         </div>
                     </div>
