--- a/project/html/multiplayer.html
+++ b/project/html/multiplayer.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="en" class="min-h-100">
 
 <head>
     <title>MemeMory</title>
@@ -37,27 +37,27 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid px-3">
                 <div class="row displ-content">
-                    <div class="col-4 align-self-start align-self-lg-center">
-                        <a class="d-xxl-none" href="/">
-                            <img src="/static/images/logo_small.png" alt="logo" class="img-fluid logo">
-                        </a>
-                        <a class=" d-none d-xxl-block" href="/">
-                            <img src="/static/images/logo.png" alt="logo" class="img-fluid logo">
-                        </a>
+                    <div class="col-12 col-sm-6 col-lg-4 order-1 order-sm-1 order-lg-1">
+                        <div class="navbar-brand active">
+                            <a href="/">
+                                <img src="/static/images/logo.png" alt="logo" class="img-fluid logo">
+                            </a>
+                        </div>
                     </div>
-                    <div class="col-4 text-center d-none d-sm-block align-self-center">
-                        <a class="text-light h1 text-decoration-none">
-                            <button type="submit" id="surrenderButton"
-                                class="form-control btn btn-outline-danger btn-lg fw-bold rounded max-width-300"
-                                onclick="surrender()" disabled>Surrender</button>
-                        </a>
+                    <div class="col-12 col-lg-4 order-sm-3 order-2 order-lg-2 text-center pt-2 pb-3 pt-md-0 pb-md-0">
+                        <button type="submit" id="surrenderButton"
+                            class="form-control btn btn-outline-danger btn-lg fw-bold rounded max-width-300"
+                            onclick="surrender()">Surrender</button>
                     </div>
-                    <div class="col-8 col-sm-4 text-center align-self-center ">
+                    <div class="col-12 col-sm-6 col-lg-4 order-3 order-sm-2 order-lg-3 fw-light">
                         <div class="d-flex text-secondary pl-xl-5">
-                            <div class="ms-auto">
-                                <p id="gameID" class="m-0 pb-1 fs-4" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                                    title="click to copy" data-bs-toggle="popover" data-bs-placement="bottom"
-                                    data-bs-content="copied" data-bs-container="body"></p>
+                            <div class="mx-auto ms-sm-auto me-sm-0">
+                                <div id="gameIDdiv">
+                                    <p id="gameID" class="m-0 pb-0 fs-4 pt-4 pt-sm-0" data-bs-toggle="popover"
+                                        data-bs-placement="bottom" data-bs-content="copied" data-bs-container="body">
+                                    </p>
+                                    <p id="gameIDdescr" class="fs-7 p-0 m-0 text-center text-secondary">^ (click to copie) ^</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -66,17 +66,17 @@
         </nav>
     </header>
 
-    <main class="pt-5 h-100">
+    <main class="pt-0 pt-md-3 pt-lg-5 h-100">
         <div class="container-fluid px-3 px-xl-5 h-100">
             <div class="row h-100">
-                <div class="col-10 h-100">
-                    <div class="container-xxl h-100">
-                        <div class="row row-cols-11 h-100" id="memoryTable">
+                <div class="col-12 col-lg-10 h-lg-100 p-1 m-0 order-2 order-lg-1">
+                    <div class="container-xxl p-0 m-0 h-100 mx-auto">
+                        <div class="row row-cols-11 h-100 justify-content-center" id="memoryTable">
                         </div>
                     </div>
                 </div>
-                <div class="col-2 d-flex flex-column h-100 p-0">
-                    <div class="text-light fs-4 p-3">
+                <div class="col-12 col-lg-2 h-lg-100 order-1 order-lg-2 d-flex flex-column p-0">
+                    <div class="text-light fs-4 p-3 text-break max-width-500 mx-auto">
                         <div class="d-flex pb-2">
                             <div class="flex-grow-1">
                                 <p id="user1Username"></p>
@@ -93,7 +93,7 @@
                                 <p id="user2Score"></p>
                             </div>
                         </div>
-                        <div class="mt-5">
+                        <div class="mt-3 mt-md-5">
                             <button type="submit" id="playButton"
                                 class="form-control btn btn-outline-info btn-lg rounded " onclick="emitEndTurn();"
                                 disabled> End Turn
@@ -176,7 +176,8 @@
         <div class="container-fluid pt-5">
             <nav class="d-flex justify-content-center text-center">
                 <div>
-                    <a class="nav-link text-light px-4 py-2 " href="https://de.wikipedia.org/wiki/Impressum">Impressum</a>
+                    <a class="nav-link text-light px-4 py-2 "
+                        href="https://de.wikipedia.org/wiki/Impressum">Impressum</a>
                 </div>
                 <div>
                     <a class="nav-link text-light px-4 py-2" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">don't
