--- a/project/html/user_profile.html
+++ b/project/html/user_profile.html
@@ -15,6 +15,7 @@
     <!--- Custom CSS-->
     <!--- identical to index.html --->
     <link rel="stylesheet" href="/static/styles/index.css">
+    <link rel="stylesheet" href="/static/styles/user_profile.css">
 
     <!--- Icons --->
     <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon/favicon.ico">
@@ -31,26 +32,26 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid px-0 px-sm-3">
                 <div class="row displ-content">
-                    <div class="col-6 col-lg-4">
+                    <div class="col-6 col-md-4 order-1 order-md-1">
                         <div class="navbar-brand active">
                             <a href="/">
                                 <img src="/static/images/logo.png" alt="logo" class="img-fluid logo">
                             </a>
                         </div>
                     </div>
-                    <div class="col-4 text-center d-none d-lg-block">
+                    <div class="col-12 col-md-4 text-center order-3 order-md-2 pt-5 pb-3 pt-md-0 pb-md-0">
                         <a class="text-light h1 text-decoration-none">
                             <button type="submit"
                                 class="form-control btn btn-lg fw-bold rounded max-width-300 lobby-button"
                                 onclick="startLobbyPage()">Play</button>
                         </a>
                     </div>
-                    <div class="col-6 col-lg-4 fw-light">
+                    <div class="col-6 col-md-4 fw-light order-2 order-md-3">
                         <div class="d-flex text-light pl-xl-5">
                             <div class="ms-auto dropdown">
                                 <p id="username" class="m-0 pb-1 dropdown-toggle fs-4" data-bs-toggle="dropdown">
                                 </p>
-                                <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end bg-dark">
+                                <ul class="dropdown-menu dropdown-menu-end bg-dark">
                                     <li>
                                         <div class="dropdown-item d-flex text-light" onclick="startScoreboardPage()">
                                             <i class="bi bi-trophy pe-3"></i>
@@ -123,22 +124,22 @@
                         </thead>
                         <tbody>
                             <tr class="tr-user-profile tr-user-profile-1">
-                                <th scope="row" class="text-start ps-5">Easy</th>
+                                <th scope="row" class="text-start ps-3 ps-sm-5">Easy</th>
                                 <td id="easyWin"></td>
                                 <td id="easyLose" class="pe-5"></td>
                             </tr>
                             <tr class="tr-user-profile tr-user-profile-2">
-                                <th scope="row" class="text-start ps-5">Medium</th>
+                                <th scope="row" class="text-start ps-3 ps-sm-5">Medium</th>
                                 <td id="mediumWin"></td>
                                 <td id="mediumLose" class="pe-5"></td>
                             </tr>
                             <tr class="tr-user-profile tr-user-profile-3">
-                                <th scope="row" class="text-start ps-5">Hard</th>
+                                <th scope="row" class="text-start ps-3 ps-sm-5">Hard</th>
                                 <td id="hardWin"></td>
                                 <td id="hardLose" class="pe-5"></td>
                             </tr>
                             <tr class="tr-user-profile tr-user-profile-4">
-                                <th scope="row" class="text-start ps-5">Expert</th>
+                                <th scope="row" class="text-start ps-3 ps-sm-5">Expert</th>
                                 <td id="expertWin"></td>
                                 <td id="expertLose" class="pe-5"></td>
                             </tr>
@@ -146,19 +147,13 @@
                                 <td colspan="3" class="text-center fs-3 pb-3 pt-5">Multiplayer</td>
                             </tr>
                             <tr class="tr-user-profile tr-user-profile-5">
-                                <th scope="col" class="text-start ps-5">Online</th>
+                                <th scope="col" class="text-start ps-3 ps-sm-5">Online</th>
                                 <td id="multiplayerWin"></td>
                                 <td id="multiplayerLose" class="pe-5"></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <div class="d-block d-lg-none container max-width-500 px-0 py-5">
-                <button type="submit" class="form-control btn btn-lg fw-bold rounded max-width-500 lobby-button"
-                    onclick="startLobbyPage()">
-                    Play
-                </button>
             </div>
         </div>
     </main>
