Added settings page | Delete user and update pw

--- a/project/html/home.html
+++ b/project/html/home.html
@@ -49,7 +49,7 @@
                             <div class="col-6 col-md-4 fw-light order-2 order-md-3">
                                 <div class="d-flex text-light pl-xl-5">
                                     <div class="ms-auto dropdown">
-                                        <p id="username" class="m-0 pb-1 dropdown-toggle fs-4 text-break"
+                                        <p id="username" class="m-0 pb-1 dropdown-toggle fs-4 text-break overflow-hidden"
                                             data-bs-toggle="dropdown">
                                         </p>
                                         <ul class="dropdown-menu dropdown-menu-end bg-dark">
