--- a/project/html/singleplayer.html
+++ b/project/html/singleplayer.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-2 h-lg-100 order-1 order-lg-2 d-flex flex-column p-0">
-                    <div class="text-light fs-4 p-3 text-break max-width-500 mx-auto">
+                    <div class="text-light fs-4 p-3 text-break w-100 max-width-500 mx-auto">
                         <div class="d-flex pb-2">
                             <div class="flex-grow-1">
                                 <p id="user1Username"></p>
