--- a/project/html/index.html
+++ b/project/html/index.html
@@ -83,10 +83,10 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-sm-10 col-md-8 col-lg-6 py-3 px-0 p-lg-4 p-xl-5 my-2 my-lg-auto rounded-3 text-light"
+                        <div class="col-12 col-sm-10 col-md-8 col-lg-6 px-0 pt-0 pb-3 p-lg-4 p-xl-5 my-2 my-lg-auto rounded-3 text-light"
                             id="loginButton">
                             <div class="container-fluid my-auto p-0 max-width-500">
-                                <div class="d-flex justify-content-evenly p-3 p-lg-5 text-center fs-3 fw-light">
+                                <div class="d-flex justify-content-evenly p-3 pt-0 pt-sm-3 p-lg-5 text-center fs-3 fw-light">
                                     <p>Play Memory with the latest memes from Reddit</p>
                                 </div>
                                 <div class="d-flex justify-content-evenly align-items-stretch">
