--- a/project/html/multiplayer.html
+++ b/project/html/multiplayer.html
@@ -47,7 +47,7 @@
                     <div class="col-12 col-lg-4 order-sm-3 order-2 order-lg-2 text-center pt-2 pb-3 pt-md-0 pb-md-0">
                         <button type="submit" id="surrenderButton"
                             class="form-control btn btn-outline-danger btn-lg fw-bold rounded max-width-300"
-                            onclick="surrender()">Surrender</button>
+                            onclick="surrender()" disabled>Surrender</button>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 order-3 order-sm-2 order-lg-3 fw-light">
                         <div class="d-flex text-secondary pl-xl-5">
@@ -56,7 +56,7 @@
                                     <p id="gameID" class="m-0 pb-0 fs-4 pt-4 pt-sm-0" data-bs-toggle="popover"
                                         data-bs-placement="bottom" data-bs-content="copied" data-bs-container="body">
                                     </p>
-                                    <p id="gameIDdescr" class="fs-7 p-0 m-0 text-center text-secondary">^ (click to copie) ^</p>
+                                    <p id="gameIDdescr" class="fs-7 p-0 m-0 text-center text-secondary">^ (click to copy) ^</p>
                                 </div>
                             </div>
                         </div>
@@ -67,16 +67,16 @@
     </header>
 
     <main class="pt-0 pt-md-3 pt-lg-5 h-100">
-        <div class="container-fluid px-3 px-xl-5 h-100">
+        <div class="container-fluid px-3 h-100">
             <div class="row h-100">
-                <div class="col-12 col-lg-10 h-lg-100 p-1 m-0 order-2 order-lg-1">
+                <div class="col-12 col-lg-9 h-lg-100 p-1 m-0 order-2 order-lg-1">
                     <div class="container-xxl p-0 m-0 h-100 mx-auto">
                         <div class="row row-cols-11 h-100 justify-content-center" id="memoryTable">
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-2 h-lg-100 order-1 order-lg-2 d-flex flex-column p-0">
-                    <div class="text-light fs-4 p-3 text-break max-width-500 mx-auto">
+                <div class="col-12 col-lg-3 h-lg-100 order-1 order-lg-2 d-flex flex-column p-0">
+                    <div class="text-light fs-4 p-3 text-break w-100 max-width-500 mx-auto me-lg-0">
                         <div class="d-flex pb-2">
                             <div class="flex-grow-1">
                                 <p id="user1Username"></p>
@@ -100,7 +100,7 @@
                             </button>
                         </div>
                         <div class="border border-light mt-auto d-none">
-                            <div class="chat h-100">
+                            <div class="chat ">
                                 <div class="d-flex flex-column" id="chat-content">
                                     <div class="message left-message">
                                         <p>Hi</p>
@@ -160,7 +160,7 @@
                                 </div>
                                 <div class="d-flex bg-transparent p-2 border-top">
                                     <input class="chat-input bg-transparent text-light flex-grow-1" type="text"
-                                        placeholder="Message your opponent">
+                                        placeholder="type... ">
                                     <a class="text-info ms-2 my-auto" href="#">
                                         <i class="bi bi-arrow-right-square"></i>
                                     </a>
