Added up to 4 Player multiplayer

--- a/project/html/index.html
+++ b/project/html/index.html
@@ -234,7 +234,7 @@
                                     You can either play against a computer, which comes in four different difficulty
                                     levels,
                                     or you
-                                    can compete online against other players.
+                                    can compete online against other player.
                                 </p><br>
                                 <p class="fs-6 ps-3">INFO: Currently, multiplayer is limited to 1 vs. 1.</p>
                             </div>
