--- a/project/html/home.html
+++ b/project/html/home.html
@@ -67,36 +67,6 @@
                                                     <p class="m-0">Settings</p>
                                                 </div>
                                             </li>
-                                            <li class="mt-2" id="keep-open-dropdown">
-                                                <div class="dropdown-item d-flex text-light dropstart">
-                                                    <i class="bi bi-people pe-3"></i>
-                                                    <a class="nav-link text-light p-0 m-0">Other Groups</a>
-                                                    <ul class="dropdown-menu dropdown-menu-end bg-dark">
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe2.testsites.info/">Group 2</a></li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe3.testsites.info/">Group 3</a></li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe4.testsites.info/">Group 4</a></li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe5.testsites.info/">Group 5</a></li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe6.testsites.info/">Group 6</a></li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe7.testsites.info/">Group 7</a></li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe8.testsites.info/">Group 8</a></li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe9.testsites.info/">Group 9</a></li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe10.testsites.info/">Group 10</a>
-                                                        </li>
-                                                        <li><a class="dropdown-item text-light"
-                                                                href="https://gruppe11.testsites.info/">Group 11</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </li>
                                             <li class="mt-2">
                                                 <div class="dropdown-item d-flex text-danger" onclick="logoutUser()">
                                                     <i class="bi bi-box-arrow-right pe-3"></i>
@@ -288,7 +258,7 @@
                                     You can either play against a computer, which comes in four different difficulty
                                     levels,
                                     or you
-                                    can compete online against other players.
+                                    can compete online against other player.
                                 </p><br>
                                 <p class="fs-6 ps-3">INFO: Currently, multiplayer is limited to 1 vs. 1.</p>
                             </div>
