--- a/project/html/multiplayer.html
+++ b/project/html/multiplayer.html
@@ -82,10 +82,10 @@
                                 <p id="user1Username"></p>
                             </div>
                             <div>
-                                <p id="user1Score">0</p>
+                                <p id="user1Score"></p>
                             </div>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex pb-2">
                             <div class="flex-grow-1">
                                 <p id="user2Username"></p>
                             </div>
@@ -93,79 +93,31 @@
                                 <p id="user2Score"></p>
                             </div>
                         </div>
+                        <div class="d-flex pb-2">
+                            <div class="flex-grow-1">
+                                <p id="user3Username"></p>
+                            </div>
+                            <div>
+                                <p id="user3Score"></p>
+                            </div>
+                        </div>
+                        <div class="d-flex pb-2">
+                            <div class="flex-grow-1">
+                                <p id="user4Username"></p>
+                            </div>
+                            <div>
+                                <p id="user4Score"></p>
+                            </div>
+                        </div>
                         <div class="mt-3 mt-md-5">
                             <button type="submit" id="playButton"
                                 class="form-control btn btn-outline-info btn-lg rounded " onclick="emitEndTurn();"
                                 disabled> End Turn
                             </button>
-                        </div>
-                        <div class="border border-light mt-auto d-none">
-                            <div class="chat ">
-                                <div class="d-flex flex-column" id="chat-content">
-                                    <div class="message left-message">
-                                        <p>Hi</p>
-                                        <p>How are you ...???</p>
-                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                    </div>
-                                    <div class="message right-message">
-                                        <p>Hi, I'm good.</p>
-                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                        </p>
-                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                    </div>
-                                    <div class="message left-message">
-                                        <p>Hi</p>
-                                        <p>How are you ...???</p>
-                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                    </div>
-                                    <div class="message right-message">
-                                        <p>Hi, I'm good.</p>
-                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                        </p>
-                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                    </div>
-                                    <div class="message left-message">
-                                        <p>Hi</p>
-                                        <p>How are you ...???</p>
-                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                    </div>
-                                    <div class="message right-message">
-                                        <p>Hi, I'm good.</p>
-                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                        </p>
-                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                    </div>
-                                    <div class="message left-message">
-                                        <p>Hi</p>
-                                        <p>How are you ...???</p>
-                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                    </div>
-                                    <div class="message right-message">
-                                        <p>Hi, I'm good.</p>
-                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                        </p>
-                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                    </div>
-                                    <div class="message left-message">
-                                        <p>Hi</p>
-                                        <p>How are you ...???</p>
-                                        <p>What are you doing tomorrow?<br> Can we come up a bar?</p>
-                                    </div>
-                                    <div class="message right-message">
-                                        <p>Hi, I'm good.</p>
-                                        <p>How are you doooooooooooooooooooooooooooooooooooooooooooooooooooooooooooing?
-                                        </p>
-                                        <p>Long time no see! Tomorrow office. will be free on sunday.</p>
-                                    </div>
-                                </div>
-                                <div class="d-flex bg-transparent p-2 border-top">
-                                    <input class="chat-input bg-transparent text-light flex-grow-1" type="text"
-                                        placeholder="type... ">
-                                    <a class="text-info ms-2 my-auto" href="#">
-                                        <i class="bi bi-arrow-right-square"></i>
-                                    </a>
-                                </div>
-                            </div>
+                            <button type="submit" id="startButton"
+                                class="form-control btn btn-outline-success btn-lg rounded " onclick="startGame();"
+                                hidden> Start Game
+                            </button>
                         </div>
                     </div>
                 </div>
