Added 5 player mode to multiplayer

--- a/project/html/home.html
+++ b/project/html/home.html
@@ -260,7 +260,7 @@
                                     or you
                                     can compete online against other player.
                                 </p><br>
-                                <p class="fs-6 ps-3">INFO: Currently, multiplayer is limited to 1 vs. 1.</p>
+                                <p class="fs-6 ps-3">INFO: You can now play MemeMory with up to 5 players.</p>
                             </div>
                         </div>
                         <div>
