--- a/project/html/multiplayer.html
+++ b/project/html/multiplayer.html
@@ -109,6 +109,14 @@
                                 <p id="user4Score"></p>
                             </div>
                         </div>
+                        <div class="d-flex pb-2">
+                            <div class="flex-grow-1">
+                                <p id="user5Username"></p>
+                            </div>
+                            <div>
+                                <p id="user5Score"></p>
+                            </div>
+                        </div>
                         <div class="mt-3 mt-md-5">
                             <button type="submit" id="playButton"
                                 class="form-control btn btn-outline-info btn-lg rounded " onclick="emitEndTurn();"
